// 1. USER & ROLES
Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar [unique, not null]
  password_hash varchar [not null] 
  full_name varchar
  phone_number varchar [unique]
  avatar_url varchar
  role_id int [ref: > roles.id, not null, default: 1] 
  is_email_verified boolean [default: false]
  is_active boolean [default: true] 
  last_login_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp
  deleted_at timestamp 
}

Table roles {
  id int [pk, increment] 
  slug varchar [unique] 
  name varchar 
  created_at timestamp [default: `now()`]
}

// 2. ADDRESS
Table user_addresses {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null]
  recipient_name varchar [not null] 
  recipient_phone varchar [not null]
  label varchar [default: 'Home']
  address_line text [not null]
  postal_code varchar [not null]
  province_id int [not null]
  city_id int [not null]
  subdistrict_id int 
  province_name varchar [not null]
  city_name varchar [not null]
  subdistrict_name varchar
  is_primary boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  deleted_at timestamp
}

// 3. PRODUCTS
Table categories {
  id int [pk, increment]
  category_name varchar [not null]
  slug varchar [unique]
  icon varchar
  image_path varchar
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table products {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, note: 'Seller ID']
  product_name varchar [not null]
  slug varchar [unique, not null]
  sku varchar [unique]
  price decimal(15, 2) [not null]
  discount_percent int [default: 0]
  short_description varchar
  description text
  weight_gram int [not null]
  stock_quantity int [not null, default: 0]
  is_published boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  deleted_at timestamp
}

Table product_categories {
  product_id uuid [ref: > products.id]
  category_id int [ref: > categories.id]
  Indexes {
    (product_id, category_id) [pk]
  }
}

Table product_galleries {
  id uuid [pk, default: `gen_random_uuid()`]
  product_id uuid [ref: > products.id, not null]
  image_path varchar [not null]
  display_order int [default: 0]
  is_thumbnail boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

// 4. CART (Single Table)
Table carts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null]
  product_id uuid [ref: > products.id, not null]
  quantity int [not null, default: 1]
  note text 
  is_selected boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  Indexes {
    (user_id, product_id) [unique]
  }
}

// 5. ORDER & TRANSACTIONS
Table order_statuses {
  id int [pk, increment]
  status_name varchar 
  slug varchar [unique]
  color varchar 
  created_at timestamp [default: `now()`]
} 

Table orders {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null]
  total_amount decimal(15, 2) [not null]
  shipping_cost decimal(15, 2) [not null]
  product_total decimal(15, 2) [not null]
  address_line text [not null]
  postal_code varchar [not null]
  province_id int [not null]
  city_id int [not null]
  subdistrict_id int 
  province_name varchar [not null]
  city_name varchar [not null]
  subdistrict_name varchar
  shipping_courier varchar 
  shipping_service varchar 
  tracking_number varchar
  order_status_id int [ref: > order_statuses.id, not null]
  created_at timestamp [default: `now()`]
  approved_at timestamp
  delivered_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table order_items {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > orders.id, not null]
  product_id uuid [ref: > products.id, not null]
  quantity int [not null]
  price decimal(15, 2) [not null] 
  note text 
  created_at timestamp [default: `now()`]
}

Table product_ratings {
  id uuid [pk, default: `gen_random_uuid()`]
  product_id uuid [ref: > products.id, not null]
  user_id uuid [ref: > users.id, not null]
  order_id uuid [ref: > orders.id, not null]
  rating int [not null]
  comment text
  created_at timestamp [default: `now()`]
  updated_at timestamp
  deleted_at timestamp
  Indexes {
    (product_id, user_id, order_id) [unique]
  }
}

// 6. APPLICATION FEES (Admin Configuration)
Table application_fees {
  id uuid [pk, default: `gen_random_uuid()`]
  fee_name varchar [not null]
  fee_type varchar [not null, note: 'PERCENTAGE or FIXED']
  fee_value decimal(15, 2) [not null]
  description text
  is_active boolean [default: true]
  created_by uuid [ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  deleted_at timestamp
}

// 7. PAYMENT TRANSACTIONS
Table payment_transactions {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > orders.id, not null]
  user_id uuid [ref: > users.id, not null]
  application_fee_id uuid [ref: > application_fees.id]
  xendit_invoice_id varchar [unique]
  xendit_external_id varchar [unique, not null]
  payment_method varchar
  payment_channel varchar
  payment_status varchar [not null, default: 'PENDING', note: 'PENDING, PAID, EXPIRED, FAILED, CANCELLED']
  amount decimal(15, 2) [not null]
  paid_amount decimal(15, 2) [default: 0]
  admin_fee decimal(15, 2) [default: 0]
  application_fee_amount decimal(15, 2) [default: 0]
  total_amount decimal(15, 2) [not null]
  invoice_url text
  checkout_url text
  paid_at timestamp
  expired_at timestamp
  description text
  payment_details jsonb
  xendit_response jsonb
  created_at timestamp [default: `now()`]
  updated_at timestamp
  deleted_at timestamp
}